@@ -33,6 +33,8 @@
 #include "zend.h"
 #include "zend_API.h"
 #include "zend_extensions.h"
+#include "ea_store.h"
+#include "ea_restore.h"
 
 #include <fcntl.h>
 
