@@ -44,6 +44,8 @@
 #  endif
 #endif
 
+#include "debug.h"
+
 #include <sys/types.h>
 #include <sys/stat.h>
 #include <errno.h>
