@@ -153,6 +153,14 @@ LINK32=link.exe
 # PROP Default_Filter "cpp;c;cxx;rc;def;r;odl;idl;hpj;bat"
 # Begin Source File
 
+SOURCE=..\debug.c
+# End Source File
+# Begin Source File
+
+SOURCE=..\ea_restore.c
+# End Source File
+# Begin Source File
+
 SOURCE=..\loader.c
 # End Source File
 # Begin Source File
@@ -163,6 +171,14 @@ SOURCE=..\opcodes.c
 # Begin Group "Header Files"
 
 # PROP Default_Filter "h;hpp;hxx;hm;inl"
+# Begin Source File
+
+SOURCE=..\debug.h
+# End Source File
+# Begin Source File
+
+SOURCE=..\ea_restore.h
+# End Source File
 # Begin Source File
 
 SOURCE=..\eaccelerator.h
